# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

*portage 1.8.9_pre6 (10 Feb 2002)

  10 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added support for 'emerge --unmerge world' which removes all old package
  versions from the system
  made 'emerge --unmerge' take binary compatibility slots into account, this
  prevents that packages with different versions but also different slots, are
  being unmerged
  added support for "--verbose" in "emerge rebuild" and "emerge world" to
  provide details about packages that aren't in the local tree anymore and to
  notify the user about which packages don't support slots

  9 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added support for the rebuild mode which rebuilds all the packages on your
  system for which a corresponding package could be found in to portage tree

  9 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  renamed getEbuildPaths() or vartree to getebuildpaths()
  fixed bug in the merging of binary packages

  7 Feb 2002; G.Bevin <gbevin@gentoo.org> xpack.py :
  added additional argument to tbz2.getfile() which allows default content to
  be provided when the requested file couldn't be found in the tbz2 archive

  7 Feb 2002; G.Bevin <gbevin@gentoo.org> ebuild.sh :
  added SLOT information as the third entry in the temporary deps file that is
  generated during ebuild depend,
  
  7 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  obtain SLOT information from the deps file instead of using the slotgrab()
  function, removed slotgrab() function, updated some comments

  7 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added SLOT information to the generated edepend var for binary packages

*portage 1.8.9_pre5 (6 Feb 2002)

  6 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  fixed bugs where the old instance wasn't unmerged correctly if slots are
  identical, but ebuild version numbers not
